link modifications, footer moved to separate container

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -38,8 +38,9 @@ img {
 }
 
 a { text-decoration: none;
+    font-style: italic;
     font-weight: 900;
-    color: #5c5c8a;
+    color: black;
 }
 
 /* Each state */
@@ -111,46 +112,13 @@ a:hover, a:active {
   margin-top: 38px;
 }
 
-.twoxlandscape__margin {
-  margin-bottom: 375px;
-}
-
 .footertext__flex {
   display: flex;
   justify-content: space-between;
+  margin-top: -10px;
 }
 
 .footertext {
   font: 20px Libre Baskerville;
   font-weight: 900;
-  margin-top: 200px;
-}
-#footer_row {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  max-width: 100%;
-  margin-top: 9em;
-}
-
-#messagelink {
-  -webkit-justify-content: flex-start;
-  justify-content: flex-start;
-  -webkit-flex: 3 0 0;
-  flex: 3 0 0;
-}
-
-#resumelink {
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-flex: 3 0 0;
-   flex: 3 0 0;
-}
-
-#toplink {
-  -webkit-justify-content: flex-end;
-  justify-content: flex-end;
-  -webkit-flex: .3 0 0;
-  flex: .3 0 0;
 }
