--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -41,6 +41,8 @@ a { text-decoration: none;
     font-style: italic;
     font-weight: 900;
     color: black;
+    display:inline-block;
+    margin-right: 5px;
 }
 
 /* Each state */
