--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -91,8 +91,8 @@ a:hover, a:active {
   height: 100%;
 }
 
-.triptych_thrice {
-  width: 30%;
+.triptych__thrice {
+  width: 32.5%;
   height: 100%;
 }
 
