--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -60,7 +60,7 @@ a:hover, a:active {
   /* letter-spacing: -10px; --
   --font kernaling works but very minute for Baskerville fonts
   --letter spacing here effects .toppagetext below name*/
-  margin-bottom: 160px;
+  margin-bottom: 60px;
 }
 
 .emailstyle {
@@ -70,7 +70,25 @@ a:hover, a:active {
 
 .pagetext {
   width: 100%;
-  margin-top: 20px;
+  margin-top: 5px;
+  margin-left: inherit;
+  font-kerning: normal;
+  font: 20px Libre Baskerville;
+}
+
+.pagetext3 {
+  width: 100%;
+  margin-top: -200px;
+  margin-bottom: 100px;
+  margin-left: inherit;
+  font-kerning: normal;
+  font: 20px Libre Baskerville;
+}
+
+.pagetext2 {
+  width: 100%;
+  margin-bottom: 50px;
+  margin-left: inherit;
   font-kerning: normal;
   font: 20px Libre Baskerville;
 }
@@ -86,7 +104,23 @@ a:hover, a:active {
   display: block;
   width: 100%;
   height: auto;
-  margin-bottom: 250px;
+  margin-bottom: 100px;
+}
+
+.displaycontainer2 {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin-bottom: 2px;
+}
+
+.displaycontainer3 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: auto;
+  margin-bottom: 200px;
 }
 
 .diptych__flex {
@@ -96,12 +130,12 @@ a:hover, a:active {
 }
 
 .diptych__both {
-  width: 49.5%;
+  width: 49.75%;
   height: 100%;
 }
 
 .triptych__thrice {
-  width: 32.5%;
+  width: 33%;
   height: 100%;
 }
 
@@ -112,9 +146,9 @@ a:hover, a:active {
 }
 
 .fourplex__each {
-  height: 49.5%;
-  width: 49.5%;
-  margin-top: 10px;
+  height: 49.75%;
+  width: 49.75%;
+  margin-top: 5px;
 }
 
 .landscape__flex {
@@ -124,7 +158,7 @@ a:hover, a:active {
 
 .landscape__each {
   width: 100%;
-  margin-top: 38px;
+  margin-top: 5px;
 }
 
 .footertext__flex {
@@ -135,4 +169,9 @@ a:hover, a:active {
 .footertext {
   font: 20px Libre Baskerville;
   margin-top: -25px;
+}
+
+.footertext2 {
+  font: 20px Libre Baskerville;
+  margin-top: 25px;
 }
